--- a/Client/src/app/orders/order-items/order-items.component.html
+++ b/Client/src/app/orders/order-items/order-items.component.html
@@ -1,1 +1,68 @@
-<p>order-items works!</p>
+<h4 class="display 4">Order Food Item</h4>
+<hr />
+
+<form #form="ngForm" autocomplete="off">
+  <div class="form-roup">
+    <label>Food Item</label>
+    <select
+      name="ItemId"
+      #ItemId="ngModel"
+      [(ngModel)]="formData.ItemId"
+      class="form-control"
+    >
+      <option value="0">--select--</option>
+      <option value="Cash">Cash</option>
+      <option value="Card">Card</option>
+    </select>
+  </div>
+  <div class="form-row">
+    <div class="form-group col-md-6">
+      <label>Price</label>
+      <div class="input-group mb-2">
+        <div class="input-group-prepend">
+          <div class="input-group-text">$</div>
+        </div>
+        <input
+          name="Price"
+          #Price="ngModel"
+          [(ngModel)]="formData.Price"
+          class="form-control"
+          readonly
+        />
+      </div>
+    </div>
+    <div class="form-group col-md-6">
+      <label>Quantity</label>
+
+      <input
+        name="Quantity"
+        #Quantity="ngModel"
+        [(ngModel)]="formData.Quantity"
+        class="form-control"
+      />
+    </div>
+  </div>
+  <div class="form-group">
+    <label>Total</label>
+    <div class="input-group mb-2">
+      <div class="input-group-prepend">
+        <div class="input-group-text">$</div>
+      </div>
+      <input
+        name="Total"
+        #Total="ngModel"
+        [(ngModel)]="formData.Total"
+        class="form-control"
+        readonly
+      />
+    </div>
+  </div>
+  <div class="form-group">
+    <button class="btn btn-dark" type="submit">
+      <i class="fa fa-database"></i> Submit
+    </button>
+    <button class="btn btn-otlinedark ml-1" type="button">
+      <i class="fa fa-close"></i> Close
+    </button>
+  </div>
+</form>
