--- a/Client/src/app/orders/order/order.component.html
+++ b/Client/src/app/orders/order/order.component.html
@@ -1,1 +1,105 @@
-<p>order works!</p>
+<form #form="ngForm" autocomplete="off" *ngIf="orderService.formData">
+  <div class="row">
+    <div class="col-md-6">
+      <div class="form-group">
+        <label>Order No.</label>
+        <div class="input-group mb-2">
+          <div class="input-group-prepend">
+            <div class="input-group-text">#</div>
+          </div>
+          <input
+            name="OrderNo"
+            #OrderNo="ngModel"
+            [(ngModel)]="orderService.formData.OrderNo"
+            class="form-control"
+            readonly
+          />
+        </div>
+      </div>
+      <div class="form-group">
+        <label>Customer</label>
+        <select
+          name="CustomerId"
+          #CustomerId="ngModel"
+          [(ngModel)]="orderService.formData.CustomerId"
+          class="form-control"
+        >
+          <option value="0">--select--</option>
+          <option value="Cash">Cash</option>
+          <option value="Card">Card</option>
+        </select>
+      </div>
+    </div>
+    <div class="col-md-6">
+      <div class="form-group">
+        <label>payment Method</label>
+        <select
+          name="Pmethod"
+          #Pmethod="ngModel"
+          [(ngModel)]="orderService.formData.Pmethod"
+          class="form-control"
+        >
+          <option value="0">--select--</option>
+        </select>
+      </div>
+      <div class="form-group">
+        <label>Grand Total</label>
+        <div class="input-group mb-2">
+          <div class="input-group-prepend">
+            <div class="input-group-text">$</div>
+          </div>
+          <input
+            name="Gtotal"
+            #Gtotal="ngModel"
+            [(ngModel)]="orderService.formData.Gtotal"
+            class="form-control"
+            readonly
+          />
+        </div>
+      </div>
+    </div>
+  </div>
+  <!-- order items table -->
+  <table class="table table-borderless">
+    <thead class="thead-light">
+      <th>Food</th>
+      <th>Price</th>
+      <th>Quantity</th>
+      <th>Total</th>
+      <th>
+        <a
+          (click)="AddOrEditOrderItem(null, orderService.formData.OrderId)"
+          class="btn btn-sm btn-success text-white"
+        >
+          <i class="fa fa-plus"></i>Add Item</a
+        >
+      </th>
+    </thead>
+    <tbody>
+      <tr *ngIf="orderService.orderItems.length == 0">
+        <td class="font-italic text-center" colspan="5">
+          No Food item selected for this order
+        </td>
+      </tr>
+      <tr *ngFor="let item of orderService.orderItems; let i = index">
+        <td>{{ item.ItemName }}</td>
+        <td>{{ item.Price }}</td>
+        <td>{{ item.Quantity }}</td>
+        <td>{{ item.Total }}</td>
+        <td>
+          <a
+            (click)="AddOrEditOrderItem(i, orderService.formData.OrderId)"
+            class="btn btn-sm btn-info text-white"
+          >
+            <i class="fa fa-pencil"></i
+          ></a>
+        </td>
+      </tr>
+    </tbody>
+  </table>
+  <div class="form-group mt-md-2">
+    <button class="btn btn-dark" type="submit">
+      <i class="fa fa-database"></i> Submit
+    </button>
+  </div>
+</form>
