--- a/Client/src/styles.css
+++ b/Client/src/styles.css
@@ -1,1 +1,12 @@
 /* You can add global styles to this file, and also import other style files */
+.form-control,
+.input-group-text {
+  border: 1px solid #0080ff;
+}
+
+table.table-hover tboday tr:hover {
+  cursor: pointer;
+}
+
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
