--- a/Client/src/app/orders/order-items/order-items.component.html
+++ b/Client/src/app/orders/order-items/order-items.component.html
@@ -1,7 +1,28 @@
 <h4 class="display 4">Order Food Item</h4>
 <hr />
 
-<form #form="ngForm" autocomplete="off">
+<form #form="ngForm" autocomplete="off" (ngSubmit)="onSubmit(form)">
+  <input
+    type="hidden"
+    name="OrderItemId"
+    #OrderItemId="ngModel"
+    [(ngModel)]="formData.OrderItemId"
+    class="form-control"
+  />
+  <input
+    type="hidden"
+    name="OrderId"
+    #OrderId="ngModel"
+    [(ngModel)]="formData.OrderId"
+    class="form-control"
+  />
+  <input
+    type="hidden"
+    name="ItemName"
+    #ItemName="ngModel"
+    [(ngModel)]="formData.ItemName"
+    class="form-control"
+  />
   <div class="form-roup">
     <label>Food Item</label>
     <select
@@ -9,10 +30,12 @@
       #ItemId="ngModel"
       [(ngModel)]="formData.ItemId"
       class="form-control"
+      (change)="updatePrice($event.target)"
     >
       <option value="0">--select--</option>
-      <option value="Cash">Cash</option>
-      <option value="Card">Card</option>
+      <option *ngFor="let item of itemList" value="{{ item.itemId }}">
+        {{ item.name }}
+      </option>
     </select>
   </div>
   <div class="form-row">
@@ -39,6 +62,7 @@
         #Quantity="ngModel"
         [(ngModel)]="formData.Quantity"
         class="form-control"
+        (keyup)="updateTotal()"
       />
     </div>
   </div>
@@ -61,7 +85,7 @@
     <button class="btn btn-dark" type="submit">
       <i class="fa fa-database"></i> Submit
     </button>
-    <button class="btn btn-otlinedark ml-1" type="button">
+    <button class="btn btn-otlinedark ml-1" type="button" [mat-dialog-close]>
       <i class="fa fa-close"></i> Close
     </button>
   </div>
