--- a/Client/src/app/orders/order/order.component.html
+++ b/Client/src/app/orders/order/order.component.html
@@ -93,6 +93,13 @@
           >
             <i class="fa fa-pencil"></i
           ></a>
+
+          <a
+            (click)="onDeleteOrderItem(item.OrderItemId, i)"
+            class="btn btn-sm btn-danger ml-1 text-white"
+          >
+            <i class="fa fa-trash"></i
+          ></a>
         </td>
       </tr>
     </tbody>
