--- a/Client/src/app/orders/order/order.component.html
+++ b/Client/src/app/orders/order/order.component.html
@@ -25,8 +25,12 @@
           class="form-control"
         >
           <option value="0">--select--</option>
-          <option value="Cash">Cash</option>
-          <option value="Card">Card</option>
+          <option
+            *ngFor="let customer of customerList"
+            value="{{ customer.customerId }}"
+          >
+            {{ customer.name }}
+          </option>
         </select>
       </div>
     </div>
@@ -40,6 +44,8 @@
           class="form-control"
         >
           <option value="0">--select--</option>
+          <option value="1">--Cash--</option>
+          <option value="2">--Card--</option>
         </select>
       </div>
       <div class="form-group">
