showing orderlist with customer  functionality is done --client && api

--- a/Client/src/app/orders/order/order.component.html
+++ b/Client/src/app/orders/order/order.component.html
@@ -124,5 +124,6 @@
     <button class="btn btn-dark" type="submit">
       <i class="fa fa-database"></i> Submit
     </button>
+    <a class="btn btn-outline-dark ml-1" routerLink='/orders'> <i class="fa fa-table"></i> View Orders</a>
   </div>
 </form>
