--- a/Client/src/app/orders/orders.component.html
+++ b/Client/src/app/orders/orders.component.html
@@ -1,1 +1,21 @@
-<p>orders works!</p>
+<table class="table table-hover">
+    <thead class="thead-light">
+        <th>#Order No.</th>
+        <th>Customer</th>
+        <th>Payment Method</th>
+        <th>Grand Total</th>
+        <th>
+            <a class="btn btn-outline-success" routerLink='/order'> <i class="fa fa-plus-square"></i> Create New</a>
+        </th>
+    </thead>
+    <tbody>
+        <tr *ngFor="let order of orderList">
+            <th>{{order.orderNo}}</th>
+            <td>{{order.customer}}</td>
+            <td>{{order.pmethod}}</td>
+            <td>{{order.gtotal}}</td>
+            <td></td>
+            
+        </tr>
+    </tbody>
+</table>
